kubernetes-files/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 4
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 812949397331.dkr.ecr.us-east-1.amazonaws.com/backend:7
        ports:
        - containerPort: 80
