kubernetes-files/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
      #nodePort: 31005  # Optional: Specify a #nodePort if you want a fixed port
  selector:
    app: backend  # Ensure this matches the labels in the Deployment
  type: LoadBalancer
