kubernetes-files/frontend-deploy-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 925774240266.dkr.ecr.us-east-1.amazonaws.com/frontend:1
        ports:
        - containerPort: 80
      #  env:   # <-- Fixed indentation
       # - name: REACT_APP_API_BASE_URL
        #  value: "http://ad2084f73b7e34376bd49ec0ea55a8bb-2099085754.us-east-1.elb.amazonaws.com"

---
apiVersion: v1
kind: Service
metadata: 
  name: frontend
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
      #    nodePort: 31004  # Optional: Specify a nodePort if you want a fixed port
  selector:
    app: frontend  # Ensure this matches the labels in the Deployment
  type: LoadBalancer
